<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="machineType"
            type="com.vag.lmsapp.model.EnumMachineType" />
        <variable
            name="serviceType"
            type="com.vag.lmsapp.model.EnumServiceType" />
    </data>
    <LinearLayout
        android:id="@+id/tabMachineType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_regular_washer"
            app:cardElevation="0dp"
            app:cardCornerRadius="0dp"
            app:cardBackgroundColor="@{machineType == com.vag.lmsapp.model.EnumMachineType.REGULAR &amp;&amp; serviceType == com.vag.lmsapp.model.EnumServiceType.WASH ? @color/white : @color/secondary_background}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:textColor="@{machineType == com.vag.lmsapp.model.EnumMachineType.REGULAR &amp;&amp; serviceType == com.vag.lmsapp.model.EnumServiceType.WASH ? @color/primary : @color/text_dark_grey}"
                android:layout_gravity="center"
                android:layout_marginVertical="12dp"
                android:text="@string/regular_washer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_regular_dryer"
            app:cardElevation="0dp"
            app:cardCornerRadius="0dp"
            app:cardBackgroundColor="@{machineType == com.vag.lmsapp.model.EnumMachineType.REGULAR &amp;&amp; serviceType == com.vag.lmsapp.model.EnumServiceType.DRY ? @color/white : @color/secondary_background}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                tools:textColor="@color/text_dark_grey"
                android:textColor="@{machineType == com.vag.lmsapp.model.EnumMachineType.REGULAR &amp;&amp; serviceType == com.vag.lmsapp.model.EnumServiceType.DRY ? @color/primary : @color/text_dark_grey}"
                android:layout_gravity="center"
                android:layout_marginVertical="12dp"
                android:text="@string/regular_dryer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_titan_washer"
            app:cardElevation="0dp"
            app:cardCornerRadius="0dp"
            app:cardBackgroundColor="@{machineType == com.vag.lmsapp.model.EnumMachineType.TITAN &amp;&amp; serviceType == com.vag.lmsapp.model.EnumServiceType.WASH ? @color/white : @color/secondary_background}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:textColor="@{machineType == com.vag.lmsapp.model.EnumMachineType.TITAN &amp;&amp; serviceType == com.vag.lmsapp.model.EnumServiceType.WASH ? @color/primary : @color/text_dark_grey}"
                android:layout_gravity="center"
                android:layout_marginVertical="12dp"
                android:text="@string/titan_washer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_titan_dryer"
            app:cardElevation="0dp"
            app:cardCornerRadius="0dp"
            app:cardBackgroundColor="@{machineType == com.vag.lmsapp.model.EnumMachineType.TITAN &amp;&amp; serviceType == com.vag.lmsapp.model.EnumServiceType.DRY ? @color/white : @color/secondary_background}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:textColor="@{machineType == com.vag.lmsapp.model.EnumMachineType.TITAN &amp;&amp; serviceType == com.vag.lmsapp.model.EnumServiceType.DRY ? @color/primary : @color/text_dark_grey}"
                android:layout_gravity="center"
                android:layout_marginVertical="12dp"
                android:text="@string/titan_dryer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</layout>
