<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".app.joborders.cancel.JobOrderCancelActivity">

    <data>
        <variable
            name="viewModel"
            type="com.vag.lmsapp.app.joborders.cancel.JobOrderCancelViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                style="@style/TextTitleFragment.Center"
                android:text="Cancel Job Order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toTopOf="@id/controls"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginVertical="24dp"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/remarks"
            app:errorEnabled="true"
            app:errorText="@{viewModel.validation.get(`remarks`)}">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={viewModel.remarks}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:onTextChanged="@{(s, start, before, count) -> viewModel.clearError(`remarks`)}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_button_close"
                style="@style/ButtonCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_margin="6dp"
                    android:divider="@drawable/divider_5"
                    android:showDividers="middle|end|beginning">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/icon_close"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/close"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_button_confirm"
                style="@style/ButtonCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_margin="6dp"
                    android:divider="@drawable/divider_5"
                    android:showDividers="middle|end|beginning">
                    <ImageView
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:src="@drawable/icon_confirm"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>