<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".app.joborders.unpaid.prompt.BottomSheetJobOrderPaymentPromptFragment">
    <data>
        <variable
            name="viewModel"
            type="com.vag.lmsapp.app.joborders.unpaid.prompt.JobOrdersUnpaidPromptViewModel" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@drawable/background_gradient_secondary"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_app_bar"
                app:cardBackgroundColor="@color/color_code_payments"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_marginVertical="18dp">
                    <TextView
                        style="@style/TextItemTitle"
                        android:text="@{viewModel.customer.name}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Tony Stark"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.customer.address}"
                        tools:text="Blk 5 Lot 7 Purok 9 Area C CSJDM Bulacan"/>
                    <TextView
                        android:textStyle="italic"
                        android:textColor="@color/black"
                        android:text="@string/unpaid_prompt"
                        android:fontFamily="sans-serif-thin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <LinearLayout
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/card_app_bar"
                app:layout_constraintBottom_toTopOf="@id/controls"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <TextView
                    style="@style/CardTitle"
                    android:text="UNPAID JOB ORDERS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.card.MaterialCardView
                    style="@style/CardItemWrapper"
                    app:contentPadding="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerUnpaidJobOrders"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/controls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/prompt_unpaid_limit_reached"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_marginVertical="18dp">
                    <TableRow>
                        <TextView
                            style="@style/TileTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="TOTAL"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>
                        <TextView
                            android:peso="@{viewModel.amountToPay}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TileTitle"
                            tools:text="P230.0"/>
                    </TableRow>
                    <TableRow>
                        <Button
                            android:enabled="@{viewModel.canCreateJobOrder}"
                            android:id="@+id/button_create_new"
                            style="@style/RoundButtonNeutral"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/Continue"/>
                        <Button
                            android:id="@+id/buttonPayment"
                            style="@style/RoundButtonPrimary"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/payment"/>
                    </TableRow>
                </TableLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                style="@style/CardPrimary.Danger"
                app:cardCornerRadius="0dp"
                app:contentPadding="0dp"
                android:id="@+id/prompt_unpaid_limit_reached"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{!viewModel.canCreateJobOrder}"
                app:layout_constraintBottom_toBottomOf="parent">
                <TextView
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_marginVertical="18dp"
                    android:textColor="@color/danger"
                    android:text="@string/prompt_unpaid_limit_reached"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>