<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".app.joborders.remarks.JobOrderRemarksActivity">
    <data>
        <variable
            name="viewModel"
            type="com.vag.lmsapp.app.joborders.remarks.JobOrderRemarksViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                style="@style/TextTitleFragment.Center"
                android:text="Cancel Job Order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            app:layout_constraintTop_toBottomOf="@id/title"
            android:id="@+id/label_remarks"
            style="@style/CardTitle"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remarks"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="@style/TextInputFlatGreyCard"
            app:layout_constraintTop_toBottomOf="@id/label_remarks"
            app:layout_constraintBottom_toTopOf="@id/control_divider">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputFlatGreyEditText"
                android:hint="Description..."
                android:text="@={viewModel.remarks}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:inputType="textMultiLine" />
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/control_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintBottom_toTopOf="@id/controls"/>
        <LinearLayout
            android:id="@+id/controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_button_close"
                style="@style/ButtonCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_margin="6dp"
                    android:divider="@drawable/divider_5"
                    android:showDividers="middle|end|beginning">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/icon_close"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/close"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_button_confirm"
                style="@style/ButtonCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_margin="6dp"
                    android:divider="@drawable/divider_5"
                    android:showDividers="middle|end|beginning">
                    <ImageView
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:src="@drawable/icon_confirm"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>